# Harbor

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  release.yml
crates/harbor-cli/: Cargo.toml
crates/harbor-cli/src/: main.rs
crates/harbor-cli/src/commands/: add.rs  crew.rs  gateway.rs  icons.rs  list.rs  mod.rs  port.rs  proxy.rs  publish.rs  relay_cmd.rs  remove.rs  search.rs  start.rs  status.rs  stop.rs  sync.rs  tools.rs  uninstall.rs  update.rs  vault.rs
crates/harbor-core/: Cargo.toml
crates/harbor-core/src/: catalog.rs  config.rs  error.rs  lib.rs  sync.rs  updater.rs
crates/harbor-core/src/auth/: mod.rs  oauth.rs  vault.rs
crates/harbor-core/src/connector/: builtins.rs  claude.rs  claude_desktop.rs  cline.rs  codex.rs  cursor.rs  def.rs  mod.rs  registry.rs  roo_code.rs  vscode.rs  windsurf.rs
crates/harbor-core/src/fleet/: config.rs  git.rs  merge.rs  mod.rs  provision.rs  state.rs
crates/harbor-core/src/gateway/: bridge.rs  endpoint.rs  http.rs  logger.rs  mod.rs  stdio.rs
crates/harbor-core/src/marketplace/: registry.rs  schema.rs
crates/harbor-core/src/relay/: acl.rs  client.rs  cloudflare.rs  crypto.rs  envelope.rs  mod.rs  server.rs  token.rs  transport.rs  tunnel.rs
crates/harbor-core/src/server/: manager.rs  mod.rs  pid_store.rs  process.rs
crates/harbor-desktop/: Cargo.toml  tauri.conf.json
crates/harbor-desktop/capabilities/: default.json
crates/harbor-desktop/icons/: icon.icns
crates/harbor-desktop/src/: commands.rs  lib.rs  logging.rs  main.rs  symlink.rs
deploy/relay/: Dockerfile  docker-compose.yml  relay.toml
docs/: ARCHITECTURE.md  FAQ.md  RELAY_PUBLISH_PLAN.md  docs.json  introduction.mdx
docs/cli/: commands.mdx  overview.mdx
docs/configuration/: config-file.mdx
docs/desktop/: hosts.mdx  lighthouse.mdx  marketplace.mdx  overview.mdx  servers.mdx  settings.mdx
docs/development/: building.mdx  contributing.mdx
docs/guides/: gateway.mdx  hosts.mdx  native-servers.mdx  oauth.mdx  publishing.mdx  team-sync.mdx  vault.mdx
docs/quickstart/: first-server.mdx  installation.mdx
examples/: basic-server.toml  fleet-team.toml  multi-host.toml
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  styles.css
ui/src/__tests__/: Hosts.test.tsx  Servers.test.tsx  StatusBadge.test.tsx  smoke.test.ts
ui/src/__tests__/mocks/: tauri.ts
ui/src/components/: Layout.tsx  OAuthCharterModal.tsx  StatusBadge.tsx
ui/src/contexts/: LogContext.tsx  ThemeContext.tsx  UpdateContext.tsx
ui/src/hooks/: useLighthouse.ts  useUpdater.ts
ui/src/lib/: tauri.ts
ui/src/pages/: Hosts.tsx  Lighthouse.tsx  Marketplace.tsx  Servers.tsx  Settings.tsx
