[workspace]
members = ["crates/harbor-core", "crates/harbor-cli", "crates/harbor-desktop"]
resolver = "2"

[workspace.package]
version = "0.5.6"
edition = "2021"
authors = ["Joshua Shunk"]
license = "MIT"
description = "Universal MCP Hub — discover, install, run, and sync MCP servers across hosts"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
sha2 = "0.11"
base64 = "0.22"
rand = "0.9"
urlencoding = "2"
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.14"
