[package]
name = "harbor-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for Harbor — manage MCP servers from the terminal"

[[bin]]
name = "harbor"
path = "src/main.rs"

[dependencies]
harbor-core = { path = "../harbor-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
colored = "3"
open = "5"
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
futures-util = "0.3"
sha2 = "0.11"
rpassword = "7"
