[package]
name = "harbor-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for Harbor — MCP server lifecycle, connectors, gateway, and auth"

[dependencies]
tokio = { workspace = true }
tokio-stream = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
async-stream = "0.3"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.13", features = ["json"] }
sha2 = { workspace = true }
self-replace = "1"
base64 = { workspace = true }
rand = { workspace = true }
urlencoding = { workspace = true }
